--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: "Main CI"
+name: "CI"
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 jobs:
   build_and_push:
     name: Rust project
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - run: git fetch --prune --unshallow
