--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build_and_push:
-    name: Rust project
+    name: Build and push to ghcr.io
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
