--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build_and_push:
-    name: Build and push to ghcr.io
+    name: Build and push to docker.io
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -30,8 +30,8 @@ jobs:
       - name: Build and push the docker image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          image: hello-world-rust
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          image: slucido/hello-world-rust
           tags: ${{ github.sha }}
