feat: add latest tag
Signed-off-by: Simon LUCIDO <simon.lucido@etu.umontpellier.fr>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,3 +35,4 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           image: slucido/hello-world-rust
           tags: ${{ github.sha }}
+          addLatest: true
