--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
       - run: git fetch --prune --unshallow
       - uses: gittools/actions/gitversion/setup@v0.9.11
         with:
-          versionSpec: '5.x'
+          versionSpec: "5.x"
       - id: gitversion
         uses: gittools/actions/gitversion/execute@v0.9.11
       - id: version
