--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
           command: build
           args: --release --all-features
       - name: Build and push the docker image
-        uses: docker-build-push
+        uses: docker/build-push-action@v3
         with:
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
