--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,12 +35,14 @@ jobs:
         with:
           command: build
           args: --release --all-features
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and push the docker image
         uses: docker/build-push-action@v3
         with:
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          image: slucido/hello-world-rust
-          tags: ${{ steps.version.outputs.version }}
-          addLatest: true
+          context: .
+          push: true
+          tags: slucido/hello-world-rust:${{ steps.version.outputs.version }}
