--- a/helm/values-cd.yaml
+++ b/helm/values-cd.yaml
@@ -14,6 +14,15 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+env:
+- name: CITY_DB_URL
+  value: localhost:5432
+- name: CITY_DB_USER
+  value: postgres
+- name: CITY_DB_PASSWORD
+  value: password
+
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
