--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,14 @@ on:
     branches:
       - main
 
+env:
+  cluster: cluster-tp-cicd
+  zone: europe-west1-b
+  project: boxwood-charmer-347912
+  chart-name: hello-rust
+  chart-path: ./helm
+  values-path: ./helm/values.yaml
+
 jobs:
   build_and_push:
     name: Build and push to docker.io
@@ -40,9 +48,37 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push the docker image
-        uses: docker/build-push-action@v3
+          image: slucido/hello-world-rust
+          tags: ${{ github.sha }}
+          addLatest: true
+  deploy-gcloud:
+    name: Deploy to gcloud
+    environment: gcloud
+    runs-on: ubuntu-latest
+    needs:
+      [build_and_push]
+      # Add "id-token" with the intended permissions.
+    permissions:
+      contents: "read"
+      id-token: "write"
+
+    steps:
+      - id: "auth"
+        uses: "google-github-actions/auth@v0"
         with:
-          context: .
-          push: true
-          tags: slucido/hello-world-rust:${{ steps.version.outputs.version }}
+          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
+
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@v0"
+
+      - name: "Install Helm"
+        run: |
+          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+          chmod 700 get_helm.sh
+          ./get_helm.sh
+
+      - name: "Connect to cluster"
+        run: "gcloud container clusters get-credentials ${{env.cluster}} --zone ${{env.zone}} --project ${{env.project}}"
+
+      - name: "Deploy chart"
+        run: helm upgrade --install ${{env.chart-name}} ${{env.chart-path}} --values ${{env.values-path}}
