feat: add cd for k3d
Signed-off-by: Simon LUCIDO <simon.lucido@etu.umontpellier.fr>

--- a/helm/values-cd-k3d.yaml
+++ b/helm/values-cd-k3d.yaml
@@ -16,12 +16,20 @@ fullnameOverride: ""
 
 env:
 - name: CITY_DB_URL
-  value: localhost:5432
+  valueFrom:
+    secretKeyRef:
+      name: city-db
+      key: url
 - name: CITY_DB_USER
-  value: postgres
+  valueFrom:
+    secretKeyRef:
+      name: city-db
+      key: user
 - name: CITY_DB_PASSWORD
-  value: password
-
+  valueFrom:
+    secretKeyRef:
+      name: city-db
+      key: password
 
 serviceAccount:
   # Specifies whether a service account should be created
