--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,67 +48,58 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          image: slucido/hello-world-rust
-          tags: ${{ github.sha }}
-          addLatest: true
+      - name: Build and push the docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: slucido/hello-world-rust:${{ steps.version.outputs.version }}
+  
   deploy-gcloud:
     name: Deploy to gcloud
     environment: gcloud
     runs-on: ubuntu-latest
-    needs:
-      [build_and_push]
-      # Add "id-token" with the intended permissions.
+    needs: [build_and_push]
     permissions:
       contents: "read"
       id-token: "write"
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - id: "auth"
         uses: "google-github-actions/auth@v0"
         with:
-<<<<<<< HEAD
           credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
-
       - name: "Set up Cloud SDK"
         uses: "google-github-actions/setup-gcloud@v0"
-
       - name: "Install Helm"
         run: |
           curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
           chmod 700 get_helm.sh
           ./get_helm.sh
-
       - name: "Connect to cluster"
         run: "gcloud container clusters get-credentials ${{env.cluster}} --zone ${{env.zone}} --project ${{env.project}}"
-
       - name: "Deploy chart"
         run: helm upgrade --install ${{env.chart-name}} ${{env.chart-path}} --values ${{env.values-path}}
-=======
-          context: .
-          push: true
-          tags: slucido/hello-world-rust:${{ steps.version.outputs.version }}
 
   deploy-k3d:
     runs-on: ubuntu-latest
+    needs: [build_and_push]
     environment: k3d
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
-
+      uses: actions/checkout@v3
     - name: Decode kubeconfig file
       run: |
         echo "::set-output name=KUBECONFIG_DECODED::$('${{ secrets.KUBERNETES_CONFIG }}')"
       id: kubeconfig
-
     - name: Install helm
       run: |
         curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
         chmod 700 get_helm.sh
         ./get_helm.sh
-
     - name: Move kubeconfig file
       run: echo "${{ secrets.KUBERNETES_CONFIG_DECODED }}" > ./kubeconfig
-
     - name: Execute helm command
       run: helm upgrade rust-tp-cicd ./helm/ --install --kubeconfig=./kubeconfig -f ./helm/values-cd-k3d.yaml
->>>>>>> 4a8d297 (feat: add cd for k3d)
