--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,7 +53,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: slucido/hello-world-rust:${{ steps.version.outputs.version }}
+          tags: slucido/city-api:${{ steps.version.outputs.version }}, slucido/city-api:latest
   
   deploy-gcloud:
     name: Deploy to gcloud
