--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,8 +14,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Exit if not on master branch
-        if: endsWith(github.ref, 'master') == false
+      - name: Exit if not on main branch
+        if: endsWith(github.ref, 'main') == false
         run: exit -1
       - name: Install gitversion
         uses: gittools/actions/gitversion/setup@v0.9.11
