fix: fix test ci
Signed-off-by: Simon LUCIDO <simon.lucido@etu.umontpellier.fr>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,7 @@ jobs:
   test-all:
     name: Run all tests for the project
     runs-on: ubuntu-latest
+    container: rust:latest
     services:
       postgres:
         image: postgres
