--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ serde = { version="1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 tokio = { version="1.18", features = ["full"] }
 actix-web-prom = "0.6.0"
+
+[target.static]
+rustflags = ["-C", "target-feature=+crt-static"]
