feat: add postgres helm chart
Signed-off-by: Simon LUCIDO <simon.lucido@etu.umontpellier.fr>

--- a/helm/api/values.yaml
+++ b/helm/api/values.yaml
@@ -4,6 +4,10 @@
 
 replicaCount: 1
 
+postgresql:
+  auth:
+    postgresPassword: password
+
 image:
   repository: slucido/city-api
   pullPolicy: Always
