--- a/helm/api/Chart.yaml
+++ b/helm/api/Chart.yaml
@@ -2,6 +2,11 @@ apiVersion: v2
 name: rust-tp-cicd
 description: A Helm chart for Kubernetes
 
+dependencies:
+  - name: postgresql
+    repository: https://charts.bitnami.com/bitnami
+    version: 11.1.3
+
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
