--- a/helm/api/values.yaml
+++ b/helm/api/values.yaml
@@ -29,7 +29,7 @@ serviceAccount:
 
 env:
   - name: CITY_API_PORT
-    value: 8080
+    value: "8080"
   - name: CITY_DB_URL
     value: localhost:5432
   - name: CITY_DB_USER
