--- a/helm/api/values.yaml
+++ b/helm/api/values.yaml
@@ -31,7 +31,7 @@ env:
   - name: CITY_API_PORT
     value: "8080"
   - name: CITY_DB_URL
-    value: localhost:5432
+    value: hello-rust-postgresql:5432
   - name: CITY_DB_USER
     value: postgres
   - name: CITY_DB_PASSWORD
